--- a/front/src/app/components/forms/login-form/login-form.component.html
+++ b/front/src/app/components/forms/login-form/login-form.component.html
@@ -7,11 +7,26 @@
 <form #form="ngForm">
     <div class="mb-4">
         <label for="correo" class="form-label">Email</label>
-        <input type="email" class="form-control" name="email" [(ngModel)]="model.email" required>
+        <input type="email" class="form-control" name="email" [(ngModel)]="model.email" placeholder="example@email.com"
+            #email="ngModel" required>
+        <div *ngIf="email.dirty || email.touched || email.invalid" class="alert">
+            <small *ngIf="email.errors?.['required']" class="alert alert-danger" role="alert">
+                Debe ingresar un email válido.
+            </small>
+        </div>
     </div>
     <div class="mb-4">
         <label for="pass" class="form-label"> Password</label>
-        <input type="password" name="password" class="form-control" [(ngModel)]="model.password" required>
+        <input type="password" name="password" class="form-control" [(ngModel)]="model.password" placeholder="123456"
+            required minlength="6" #password="ngModel" required>
+        <div *ngIf="password.dirty || password.touched" class="alert">
+            <small *ngIf="password.errors?.['required']" class="alert alert-danger" role="alert">
+                Por favor inserte su password.
+            </small>
+            <small *ngIf="password.errors?.['minlength']" class="alert alert-danger" role="alert">
+                Recuerde que su password debe tener al menos 6 caracteres.
+            </small>
+        </div>
     </div>
     <div class="d-grid">
         <button type="button" name="submit" class="btn btn-primary" (click)="logIn(form)">Iniciar sesion</button>
