--- a/front/src/app/modules/dashboard/dashboard-page/dashboard-page.component.html
+++ b/front/src/app/modules/dashboard/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,13 @@
-<p>Page works!</p>
+<section class="contenedor">
+    <img src="../../../../assets/noc-front.jpg">
+</section>
+<section class="main">
+    <div class="col-md-10">
+        <h2>Cursos agregados recientemente</h2>
+    </div>
+</section>
+<section class="main">
+    <div class="col-md-10">
+        <h2>Novedades</h2>
+    </div>
+</section>
