Modificacion integracion cursos-curso-perfil-auth

--- a/front/src/app/modules/pages/carrito/carrito.component.html
+++ b/front/src/app/modules/pages/carrito/carrito.component.html
@@ -1,4 +1,20 @@
 <div class="container">
+  <main>
+    <p class="lead py-5 text-center">Mi perfil</p>
+    <div class="row g-5">
+      <div class="col-md-5 col-lg-4 order-md-last">
+      </div>
+    </div>
+    {{id}}
+    {{user.firstName}}
+  </main>
+</div>
+<!-- <div class="container">
+    <main>
+        <p class="lead py-5 text-center">Lee detalladamente cada campo y llenalo para finalizar el pago de tu curso</p>
+      <div class="row g-5">
+        <div class="col-md-5 col-lg-4 order-md-last">
+
     <main>
         <p class="lead py-5 text-center">Lee detalladamente cada campo y llenalo para finalizar el pago de tu curso</p>
       <div class="row g-5">
@@ -153,4 +169,4 @@
         </div>
       </div>
     </main>
-  </div>
+  </div> -->
