--- a/front/src/app/modules/pages/cursos/cursos.component.html
+++ b/front/src/app/modules/pages/cursos/cursos.component.html
@@ -26,8 +26,9 @@
             </nav>
         </div>
     </div> -->
+    <br><br>
     <div class="container px-4" id="custom-cards">
-        <h2 class="pb-2 border-bottom">Cursos Disponibles</h2>
+        <h2 class="pb-4 border-bottom">Cursos Disponibles</h2>
         <div class="album py-5 bg-body-tertiary">
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -36,7 +37,8 @@
                             <div class="card-header text-center">
                                 <h3 class="fw-bold">{{course.courseName}}</h3>
                             </div>
-                            <ul class="list-group list-group-flush">
+                            <ul class="list-group list-group-flush"
+                                style="display:flex; justify-content: flex-start; align-content: center;">
                                 <li class="list-group-item">{{course.shortDescription}}</li>
                                 <li class="list-group-item"><u>Comienza:</u> {{course.courseStartDate | date:'dd - MM -
                                     yyyy'
@@ -47,12 +49,11 @@
                             </ul>
                             <div class="card-body">
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                    <button class="btn btn-primary me-md-2"><a>Ver más</a></button>
+                                    <a class="btn btn-primary me-md-2" [routerLink]="['/cursos/details', course.id]">Ver
+                                        más</a>
                                 </div>
                             </div>
-
                         </div>
-
                     </div>
                 </div>
                 <!-- <app-curso></app-curso>
