--- a/front/src/app/modules/layout/header/header.component.html
+++ b/front/src/app/modules/layout/header/header.component.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" aria-current="page" routerLink='/precios'>Nuestros Planes</a>
                         </li>
                         <li class="nav-item m-3" *ngIf="isLoggedIn() | async">
-                            <a class="nav-link" aria-current="page" routerLink='/home'>Mi
+                            <a class="nav-link" aria-current="page" [routerLink]="['/miperfil', id.id]">Mi
                                 perfil</a>
 
                         </li>
