--- a/front/src/app/modules/pages/carrito/carrito.component.html
+++ b/front/src/app/modules/pages/carrito/carrito.component.html
@@ -1,12 +1,62 @@
 <div class="container">
-  <main>
-    <p class="lead py-5 text-center">Mi perfil</p>
-    <div class="row g-5">
-      <div class="col-md-5 col-lg-4 order-md-last">
+  <main style="margin: 20px; display: flex; justify-content: center;">
+
+    <div class="card text-center">
+      <div class="card-header">
+        <h3>Bienvenido {{user.firstName }} {{user.lastName}}</h3>
+      </div>
+      <div class="card-header">
+        <ul class="nav nav-pills card-header-pills">
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="user.isAdmin" routerLink="/cursos/create">Crear curso</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="user.isAdmin || user.isTeacher" [routerLink]="['/cursos']">Modificar
+              cursos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="user.isAdmin" routerLink="/cursos/create">Crear publicación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="user.isAdmin" routerLink="/cursos/create">Modificar publicación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="user.isAdmin || user.isTeacher" routerLink="/cursos/create">Asistencias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="user.isAdmin" routerLink="/cursos/create">Pagos</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card-body">
+        <p *ngIf="user.isAdmin">Desde aquí se puede modificar todos los cursos y publicaciones, además de ver todos los
+          cursos disponibles y usuarios</p>
+        <div *ngIf="!user.isAdmin || !user.isTeacher">
+          <h3 class="card-title">Datos</h3>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="addon-wrapping">Nombre</span>
+            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+              aria-describedby="button-addon2" value="{{user.firstName}}">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Cambiar</button>
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="addon-wrapping">Apellido</span>
+            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+              aria-describedby="button-addon2" value="{{user.lastName}}">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Cambiar</button>
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="addon-wrapping">Email</span>
+            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+              aria-describedby="button-addon2" value="{{user.email}}">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Cambiar</button>
+          </div>
+          <h3 class="card-title">Cursos</h3>
+        </div>
+
+
       </div>
     </div>
-    {{id}}
-    {{user.firstName}}
   </main>
 </div>
 <!-- <div class="container">
