Cursos: back e inscripcion desde front

--- a/front/src/app/components/commons/curso/curso.component.html
+++ b/front/src/app/components/commons/curso/curso.component.html
@@ -26,7 +26,7 @@
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-secondary me-md-2" type="button" [routerLink]="['/cursos']">Volver</button>
 
-            <button class="btn btn-primary" type="button" [routerLink]="['/']">Inscribirse</button>
+            <button class="btn btn-primary" type="button" (click)="registerInCourse()">Inscribirse</button>
           </div>
         </div>
       </div>
